feat: 유저 개인화 데이터 처리 job - 일정 달성률 산정 step1 구현